second commit fix

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 							<li><a href="#one">Skills</a></li>
 							<li><a href="#two">Projects</a></li>
 							<li><a href="#three">Get in touch</a></li>
+
+							<li><a><i class="fas fa-map-marker-alt" ></i> &nbsp;Los Angeles, CA</a></li>
+
+						<ol>
+							<button class="sidebar-btn" href="#"><i  class="icon far fa-envelope side-icon"></i> </button>
+							<button class="sidebar-btn" href="#"><i  class="fas fa-phone-alt side-icon"></i></button>
+							<button class="sidebar-btn" href="#"><i  class="icon brands fa-linkedin-in side-icon"></i></button>
+							<button class="sidebar-btn" href="#"><i  class="icon brands fa-github side-icon"></i></button>
+						</ol>
 						</ul>
 					</nav>
 				</div>
@@ -30,7 +39,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						
 							<div class="inner">
-								<canvas class="intro" id="#background" style="width: 120%; height: 120%;"></canvas>
+								<canvas class="intro" id="background" style=""></canvas>
 								<div class="inner-inner" style="margin-top:-30rem;">
 									<h1>HI! IM ASHLEY.</h1>
 									<p>
