--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 										<h3>FRONT-END DEVELOPER | FULL STACK DEVELOPER | FREELANCER</h3>
 										 <br>I'm a web developer & programmer living in LA. I make web applications, usually with React.<br> 
 										Currently an youth coding instructor helping younger generations create beautiful sites and coding fun!</p>
-									<ul class="actions">
+									 <ul class="actions">
 										<li><a href="#one" class="button scrolly">Learn more</a></li>
 									</ul>
 								</div>
@@ -57,11 +57,6 @@
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Programming</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Front-End </h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
@@ -69,6 +64,11 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Back-End </h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>Programming</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
@@ -89,7 +89,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2><i class="fas fa-chalkboard-teacher"></i> &nbsp;PROJECTS</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Check out some projects I've had made!</p>
 									<ul class="actions">
 										<li><a href="portfolio.html" class="button">Learn more</a></li>
 									</ul>
@@ -161,11 +161,11 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
 										</li>
 									</ul>
