test project links cms

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									<h2><i class="fas fa-chalkboard-teacher"></i> &nbsp;PROJECTS</h2>
 									<p>Check out some projects I've had made!</p>
 									<ul class="actions">
-										<li><a href="portfolio.html" class="button">Learn more</a></li>
+										<li><a href="https://ashley-radford.webflow.io/portfolio" target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -103,7 +103,7 @@
 									<h2><i class="fas fa-gem"></i> &nbsp; DESIGNS</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="designs.html" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Coming Soon</a></li>
 									</ul>
 								</div>
 							</div>
