--- a/portfolio.html
+++ b/portfolio.html
@@ -37,20 +37,20 @@
 											<div class="col-4">
 												<h3>Theme Park Planner</h3>
 												<span class="image fit">
-													<a href="http://www.ashr.info"><img src="images/pic01.jpg" alt="" /></a>
+													<a href="https://radiant-everglades-42616.herokuapp.com/" target="_blank"><img src="images/pic01.jpg" alt="theme-park-planner-demo" /></a>
 												</span>
 												<ul class="actions">
-													<li><a href="#" class="button icon  brands fa-github">Icon</a></li>
+													<li><a href="https://ashley-radford.webflow.io/projects/awesome-company-logo-design" target="_blank" class="button icon  brands fa-github">View More</a></li>
 												</ul>
 											</div>
 
 											<div class="col-4">
 												<h3>Real Estate Commerce </h3>
 												<span class="image fit">
-													<img src="images/pic02.jpg" alt="" />
+													<img src="images/pic02.jpg" target="_blank"alt="real-estate-commerce-demo" />
 												</span>
 												<ul class="actions">
-													<li><a href="#" class="button primary icon brands fa-github">Icon</a></li>
+													<li><a href="#" target="_blank"class="button primary icon brands fa-github">Icon</a></li>
 												</ul>
 											</div>
 
