update portfolio.html -> designs.html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									<h2><i class="fas fa-gem"></i> &nbsp; DESIGNS</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Coming Soon</a></li>
+										<li><a href="designs.html" class="button">Coming Soon</a></li>
 									</ul>
 								</div>
 							</div>
