--- a/designs.html
+++ b/designs.html
@@ -44,7 +44,7 @@
 												</ul>
 											</div>
 
-											<div class="col-4">
+											<!-- <div class="col-4">
 												<h3>Real Estate Commerce </h3>
 												<span class="image fit">
 													<img src="images/pic02.jpg" target="_blank"alt="real-estate-commerce-demo" />
@@ -72,9 +72,9 @@
 												<ul class="actions">
 													<li><a href="#" class="button primary icon brands fa-github">Icon</a></li>
 												</ul>
-											</div>
+											</div> -->
 
-											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+											<!-- <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 
@@ -82,7 +82,7 @@
 
 											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 
-											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div> -->
 
 										</div>
 									</div>
