--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 										<li>
 											<h3>Location</h3>
 											<span><i class="fas fa-map-marker-alt" ></i>
-												&nbsp;</a>Los Angeles, California<br />
+												&nbsp;Los Angeles, California<br />
 											</span>
 										</li>
 										<li>
@@ -155,8 +155,9 @@
 											&nbsp;<a href="#"> radford.ash@gmail.com</a>
 										</li>
 										<li>
-											<!-- <h3>Phone</h3>
-											<span>(000) 000-0000</span> -->
+											<h3>Phone</h3>
+											
+											<span><i class="fas fa-phone-alt side-icon"></i>&nbsp;(000) 000-0000</span>
 										</li>
 										<li>
 											<h3>Social</h3>
