--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<button class="sidebar-btn" href="#"><i  class="icon far fa-envelope side-icon"></i> </button>
 							<button class="sidebar-btn" href="#"><i  class="fas fa-phone-alt side-icon"></i></button>
 							<button class="sidebar-btn" href="#"><i  class="icon brands fa-linkedin-in side-icon"></i></button>
-							<button class="sidebar-btn" href="#"><i  class="icon brands fa-github side-icon"></i></button>
+							<button class="sidebar-btn" href="#"><i  class="icon fas fa-file side-icon"></i></button>
 						</ol>
 						</ul>
 					</nav>
@@ -36,7 +36,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						
 							<div class="inner">
-								<canvas class="intro" id="background" style=""></canvas>
+								<canvas class="intro" id="background"></canvas>
 								<div class="inner-inner" style="margin-top:-30rem;">
 									<h1>HI! IM ASHLEY.</h1>
 									<p>
@@ -78,6 +78,7 @@
 								</section>
 							</div>
 							<ul class="actions">
+								<li><a href="#" class="button">Download Resume</a></li>
 								<li><a href="#two" class="button">View Projects</a></li>
 							</ul>
 						</div>
@@ -113,7 +114,7 @@
 			
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up" style="background-color: #880088;">
+					<section id="three" class="wrapper style1 fade-up" style="background-color: #38556a;">
 						<div class="inner">
 							<h2>Let's get in contact.</h2>
 							<p>If you have a project that you want to get started, local or remote,
@@ -144,9 +145,9 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Location</h3>
-											<span><i class="fas fa-map-marker-alt" ></i>
-												&nbsp;Los Angeles, California<br />
+											<h3>CV</h3>
+											<span><i class="fas fa-file-alt" ></i>
+												&nbsp;Resume<br />
 											</span>
 										</li>
 										<li>
@@ -156,8 +157,7 @@
 										</li>
 										<li>
 											<h3>Phone</h3>
-											
-											<span><i class="fas fa-phone-alt side-icon"></i>&nbsp;(000) 000-0000</span>
+											<span>(000) 000-0000</span>
 										</li>
 										<li>
 											<h3>Social</h3>
@@ -165,6 +165,7 @@
 												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 												<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+												<li><a href="#" class="icon fas fa-file-alt"><span class="label">Resume</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 											</ul>
