fix vh of intro inner

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						
 							<div class="inner">
 								<canvas class="intro" id="background"></canvas>
-								<div class="inner-inner" style="margin-top:-30rem;">
+								<div class="inner-inner" style="width:100vh; height:100vh; margin-top:-33em;">
 									<h1>HI! IM ASHLEY.</h1>
 									<p>
 										<h3>FRONT-END DEVELOPER | FULL STACK DEVELOPER | FREELANCER</h3>
