--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="#" class="button">Download Resume</a></li>
+								<li><a href="https://docs.google.com/document/d/1i9Y1V2XHh8K2QGdbWntq94ja5sTjzTpsluZ9NJNgC0I/edit?usp=sharing" class="button" target="_blank">View Resume</a></li>
 								<li><a href="#two" class="button">View Projects</a></li>
 							</ul>
 						</div>
