added formspree.io to contacts working

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="https://ashley-radford.webflow.io/portfolio" target="_blank" class="image"><img src="/assets/css/images/flat-mountain.svg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2><i class="fas fa-chalkboard-teacher"></i> &nbsp;PROJECTS</h2>
@@ -97,18 +97,18 @@
 								</div>
 							</div>
 						</section>
-						<section>
+						<!-- <section>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2><i class="fas fa-gem"></i> &nbsp; DESIGNS</h2>
+									<h2><i class="fas fa-gem"></i> &nbsp; Project DB Implement later Layout 80%</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="designs.html" class="button">Coming Soon</a></li>
 									</ul>
 								</div>
 							</div>
-						</section>
+						</section> -->
 					</section>
 
 			
@@ -122,7 +122,7 @@
 								then let's get in touch!</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<form method="POST" action="https://formspree.io/xwkroaar">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -130,7 +130,7 @@
 											</div>
 											<div class="field half">
 												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
+												<input type="text"  id="email" name="_replyto"/>
 											</div>
 											<div class="field">
 												<label for="message">Message</label>
@@ -138,7 +138,8 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li>
+												<input type="submit" value="Send Message"></li>
 										</ul>
 									</form>
 								</section>
@@ -146,18 +147,23 @@
 									<ul class="contact">
 										<li>
 											<h3>CV</h3>
-											<span><i class="fas fa-file-alt" ></i>
-												&nbsp;Resume<br />
+											<span>
+												<a href="#">
+													<i class="fas fa-file-alt" ></i>&nbsp;Resume<br />
+												</a>
 											</span>
 										</li>
 										<li>
 											<h3>Email</h3>
+											<a href="mailto:radford.ash@gmail.com?subject = Feedback&body = Message">
 											<i class="far fa-envelope"></i>
-											&nbsp;<a href="#"> radford.ash@gmail.com</a>
+											&nbsp; radford.ash@gmail.com</a>
 										</li>
 										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<h3>Location</h3>
+											<span><i class="fas fa-map-marker-alt" ></i>
+												&nbsp;Los Angeles, CA<br />
+											</span>
 										</li>
 										<li>
 											<h3>Social</h3>
