--- a/designs.html
+++ b/designs.html
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" style="background-color: #38556a;">
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Ashley Radford</a>
+				<a href="index.html" class="title">ASHLEY RADFORD</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -27,7 +27,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Projects</h1>
+							<h1 class="major">PROJECTS</h1>
 							<!-- Image -->
 								<section>
 									<div class="box alt">
