cross comp test

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						
 							<div class="inner">
-								<canvas class="intro" id="background"></canvas>
-								<div class="inner-inner" style="width:100vh; height:100vh; margin-top:-20em;">
+								<canvas class="intro" id="background" ></canvas>
+								<div class="inner-inner" style="width:130vh; height:100vh; margin-top:-33.33em;">
 									<h1>HI! IM ASHLEY.</h1>
 									<p>
 										<h3>FRONT-END DEVELOPER | FULL STACK DEVELOPER | FREELANCER</h3>
@@ -155,7 +155,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="mailto:radford.ash@gmail.com?subject = Feedback&body = Message">
+											<a href="mailto:radford.ash@gmail.com">
 											<i class="far fa-envelope"></i>
 											&nbsp; radford.ash@gmail.com</a>
 										</li>
