--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>💠 &nbsp;Ashley Radford | Front End Developer </title>
 		<meta charset="utf-8" />
